Bug 269635 - Plasma panel totally screwed when changing screen resolution
Summary: Plasma panel totally screwed when changing screen resolution
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: panel (other bugs)
Version First Reported In: 4.9.1
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-28 19:54 UTC by Ralf Jung
Modified: 2012-09-22 09:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.2
Sentry Crash Report:


Attachments
The screwed-up panel (30.80 KB, image/png)
2011-03-28 19:54 UTC, Ralf Jung
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Jung 2011-03-28 19:54:48 UTC
Created attachment 58407 [details]
The screwed-up panel

Version:           unspecified (using KDE 4.5.5) 
OS:                Linux



Reproducible: Always

Steps to Reproduce:
Start ScummVM, enter full-screen mode (Alt+Enter) and leave it again.

Actual Results:  
The panel should look as usual.

Expected Results:  
The notification area is all black, a part of the panel border is black, and the KMail notification icon is at the totally wrong place, somewhere on top of a window item. It's not just drawn there, it's also clickable! Also see attached screenshot.

Composite is turned off.
Comment 1 Ralf Jung 2011-04-23 12:44:52 UTC
This is still happening with KDE 4.6.2.
Comment 2 Ralf Jung 2011-10-02 12:17:31 UTC
Actually this does not seem to be related to the full-screen mode but to resolution changes: I can get the same affect with some xrandr calls to change the resolution from default (1266x768) to 1024x768 and back.
Comment 3 Myriam Schweingruber 2012-05-22 13:18:15 UTC
Is this still valid for KDE 4.8.3 or trunk?
Comment 4 Ralf Jung 2012-05-22 13:30:13 UTC
It is still valid for 4.7.4. I currently do not have a later version running and working - maybe I can compile the current stable on the weekend, but I can't promise anything.
Comment 5 Myriam Schweingruber 2012-05-22 13:38:13 UTC
Thank you for the fast feedback, at least we have a version closer to the current one now.
Comment 6 Ralf Jung 2012-06-26 11:26:56 UTC
Confirmed for KDE 4.8.4
Comment 7 Ralf Jung 2012-09-13 19:24:04 UTC
Confirmed for KDE 4.9.1:
* Turn off compositing
* xrandr -s 3 (on my system, the 4h line from "xrandr -q" is "800x600")
* xrandr -s 0 (native resolution, 1366x768)
* Enjoy the broken panel after increasing the resolution: Parts of it are entirely black
With compositing enabled, the formerly black parts show the blurred background, and they re-fill with content more quickly, but the issue is still noticeable.
Comment 8 Ralf Jung 2012-09-22 09:05:03 UTC
Git commit 2fe20079a8cdeef325ca7f215f16fa07f75d2603 by Ralf Jung.
Committed on 15/09/2012 at 23:50.
Pushed by ralfjung into branch 'master'.

Fix panel redraw after screen resize

REVIEW: 106519
FIXED-IN: 4.9.2

M  +10   -0    plasma/desktop/shell/desktopcorona.cpp
M  +1    -0    plasma/desktop/shell/desktopcorona.h

http://commits.kde.org/kde-workspace/2fe20079a8cdeef325ca7f215f16fa07f75d2603
Comment 9 Ralf Jung 2012-09-22 09:07:15 UTC
Git commit d6de898bee50f92307422852b9f20c78635db311 by Ralf Jung.
Committed on 15/09/2012 at 23:50.
Pushed by ralfjung into branch 'KDE/4.9'.

Fix panel redraw after screen resize

REVIEW: 106519
FIXED-IN: 4.9.2

M  +10   -0    plasma/desktop/shell/desktopcorona.cpp
M  +1    -0    plasma/desktop/shell/desktopcorona.h

http://commits.kde.org/kde-workspace/d6de898bee50f92307422852b9f20c78635db311