Fix panel redraw after screen resize

REVIEW: 106519
BUG: 269635
FIXED-IN: 4.9.2